[package]
name = "bevy_silk"
version = "0.7.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
repository = "https://github.com/ManevilleF/bevy_silk"
license-file = "./LICENSE"
exclude = ["docs", "assets", ".github"]
description = "Cloth physics implementation in bevy"
keywords = ["verlet", "physics", "bevy", "cloth"]
categories = ["game-engines", "game-development"]
readme = "README.md"
documentation = "https://docs.rs/bevy_silk"

[features]
default = []
rapier_collisions = ["bevy_rapier3d"]
xpbd_collisions = ["bevy_xpbd_3d"]

[dependencies]
# Error handling
thiserror = "1.0"

[dependencies.bevy]
version = "0.12"
default-features = false
features = ["bevy_render", "bevy_asset"]

[dependencies.bevy_rapier3d]
version = "0.23"
optional = true
default-features = false
features = ["dim3", "async-collider"]

[dependencies.bevy_xpbd_3d]
version = "0.3"
optional = true
default-features = false
features = ["3d", "f32", "async-collider"]

[dev-dependencies]
bevy-inspector-egui = "0.21"
bevy_rapier3d = "0.23"
rand = "0.8"

[dev-dependencies.bevy]
version = "0.12"
features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "png",
  "x11",
  # The following features are required because of https://github.com/bevyengine/bevy/discussions/9100
  "ktx2",
  "zstd",
  "tonemapping_luts",
]
default-features = false

[[example]]
name = "balloon"
path = "examples/balloon_example.rs"

[[example]]
name = "flag"
path = "examples/flag_example.rs"

[[example]]
name = "moving"
path = "examples/moving_example.rs"

[[example]]
name = "rapier_collision"
path = "examples/rapier_collision_example.rs"
required-features = ["rapier_collisions"]

[[example]]
name = "xpbd_collision"
path = "examples/xpbd_collision_example.rs"
required-features = ["xpbd_collisions"]

[[example]]
name = "anchors"
path = "examples/anchors_example.rs"

[[example]]
name = "camera_plugin"
path = "examples/camera_plugin.rs"
crate-type = ["staticlib"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

